Fix sourceCompatibility and targetCompatibility in auxiliary modules. Add support for Java 17 when using ktlintFormat.